# Incubyte_Assessment_Sweet_Shop

./: Makefile  README.md  docker-compose.yaml  tmp.py
client/: Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json
client/app/: config.tsx  globals.css  layout.ts  not-found.tsx  page.tsx
client/app/(user)/: layout.tsx
client/app/(user)/(auth)/login/: form.tsx  page.tsx
client/app/(user)/(auth)/sign-up/: form.tsx  page.tsx
client/app/(user)/u/search/: category-dialog.tsx  category-search.tsx  page.tsx  purchase.tsx  restock.tsx  search.tsx  sweet-dialog.tsx  table.tsx  update-sweet.tsx
client/components/: navbar.tsx  search.tsx
client/components/contact-01/: contact-01.tsx
client/components/features-02/: features-02.tsx
client/components/footer-05/: footer-05.tsx
client/components/hero-02/: hero-02.tsx
client/components/testimonial-06/: testimonial-06.tsx
client/constant/: assets-links.ts  page-links.ts
client/interface/: form.ts
client/lib/: form-handler.ts  use-zod-form.ts  utils.ts
server/: .env  .env.example  .gitignore  Dockerfile  pyproject.toml  pytest.ini
server/src/: main.py
server/src/models/: __init__.py  category.py  sweets.py  users.py
server/src/routes/: auth.py  sweets.py
server/src/schemas/: response.py  sweets.py  token.py  user_login.py
server/src/utils/: auth.py  db.py  env.py  password.py
server/tests/: test_auth.py  test_inventory.py  test_sweets.py
